@@ -1,4 +1,12 @@
 2008-06-24  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR libstdc++/36616
+	* testsuite/22_locale/money_put/put/char/9780-3.cc: Fix expected
+	results for recent glibcs (2.8 and later).
+	* testsuite/22_locale/time_put/put/wchar_t/4.cc: Likewise.
+	* testsuite/22_locale/time_put/put/char/4.cc: Likewise.
+
+2008-06-24  Paolo Carlini  <paolo.carlini@oracle.com>
 	    Chalathip Thumkanon  <chalathip@gmail.com>
 
 	PR libstdc++/36612
